--- a/practice.html
+++ b/practice.html
@@ -4,12 +4,18 @@
     <meta charset="utf-8">
     <title></title>
   </head>
+  <link rel="stylesheet" href="P_master.css">
   <body>
-  <form >
-  <table style="border: 1px solid black; border_collapse: collapse">
-  <label for="userinput">Enter something Please:</label>
-  <input id="username" name="" placeholder="Enter your Email Please" required>
-  <input type="submit" name="" value="submit">
-  </table>
+    <form>
+     <h1>Baydhabo Primary and Secondary School!</h1>
+     <ol>
+       <li>English</li>
+       <li>Mathematics</li>
+       <li>Pyhsics</li>
+       <li>History</li>
+       <li>IRE</li>
+     </ol>
+     <p>THE BEST School IN Baydhabo TOWN!<p>
+    </form>
   </body>
 </html>
